--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css" />
     <script defer type="module" src="javascript/script.js"></script>
+    <script defer type="module" src="javascript/center-scroll.js"></script>
 
     <title>Mind Map</title>
   </head>
   <body>
-    <canvas id="mindMapCanvas" width="900" height="700"></canvas>
+    <div class="canvas-container">
+      <canvas id="mindMapCanvas" width="2600" height="1800"></canvas>
+    </div>
   </body>
 </html>
