save and load from local storage

--- a/index.html
+++ b/index.html
@@ -10,8 +10,18 @@
     <title>Mind Map</title>
   </head>
   <body>
-    <div class="canvas-container">
-      <canvas id="mindMapCanvas" width="2600" height="1800"></canvas>
+    <div class="main-content">
+      <div class="content-container">
+        <div class="canvas-container">
+          <canvas id="mindMapCanvas" width="2600" height="1800"></canvas>
+        </div>
+      </div>
+      <div class="storage-container">
+        <div class="local-storage-name">Local storage</div>
+        <div class="local-storage-list">
+          <div class="local-storage-item"></div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
