added functionnality of storing mindmap in local storage

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       <div class="storage-container">
         <div class="local-storage-name">Local storage</div>
-        <div class="local-storage-list">
+        <div class="local-storage-list" id="local-storage-list">
           <div class="local-storage-item"></div>
         </div>
       </div>
