added keyboard mouse and startup directories
project has more modular structure

--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css" />
     <script defer type="module" src="javascript/script.js"></script>
-    <script defer type="module" src="javascript/center-scroll.js"></script>
+    <script
+      defer
+      type="module"
+      src="javascript/startup/CenterMindmap.js"
+    ></script>
+    <script
+      defer
+      type="module"
+      src="javascript/startup/GrabbingMode.js"
+    ></script>
 
     <title>Mind Map</title>
   </head>
