--- a/index.html
+++ b/index.html
@@ -21,6 +21,57 @@
   <body>
     <div class="main-content">
       <div class="content-container">
+        <div class="upper-menu">
+          <button class="menu-item" title="Undo" id="undo-button">
+            <svg class="icon" viewBox="0 0 24 24">
+              <path
+                d="M12,5V1L7,6l5,5V7c3.31,0,6,2.69,6,6s-2.69,6-6,6c-2.22,0-4.15-1.2-5.19-3H3.34C4.72,19.9,8.09,23,12,23c4.97,0,9-4.03,9-9S16.97,5,12,5z"
+              />
+            </svg>
+          </button>
+          <button class="menu-item" title="Redo" id="redo-button">
+            <svg class="icon" viewBox="0 0 24 24">
+              <path
+                d="M12,19v4l5-5l-5-5v4c-3.31,0-6-2.69-6-6s2.69-6,6-6c2.22,0,4.15,1.2,5.19,3h2.48C19.28,4.1,15.91,1,12,1C7.03,1,3,5.03,3,10S7.03,19,12,19z"
+              />
+            </svg>
+          </button>
+          <button class="menu-item" title="Save" id="save-button">
+            <svg class="icon" viewBox="0 0 24 24">
+              <path
+                d="M17,3H5C3.9,3,3,3.9,3,5v14c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V7L17,3z M12,19c-2.21,0-4-1.79-4-4s1.79-4,4-4s4,1.79,4,4S14.21,19,12,19z M14,8H6V5h8V8z"
+              />
+            </svg>
+          </button>
+          <button class="menu-item" title="Load" id="load-button">
+            <svg class="icon" viewBox="0 0 24 24">
+              <path
+                d="M17,13c-1.1,0-2,0.9-2,2s0.9,2,2,2s2-0.9,2-2S18.1,13,17,13z M7,13c-1.1,0-2,0.9-2,2s0.9,2,2,2s2-0.9,2-2S8.1,13,7,13z M12,3L4,9v4h4v6h8v-6h4V9L12,3z"
+              />
+            </svg>
+          </button>
+          <button class="menu-item" title="Export" id="export-button">
+            <svg class="icon" viewBox="0 0 24 24">
+              <path
+                d="M5,4h14v2H5V4z M14,9l-4,4l4,4v-3h4v-2h-4V9z M20,14h2v4c0,1.1-0.9,2-2,2H4c-1.1,0-2-0.9-2-2v-4h2v4h16V14z"
+              />
+            </svg>
+          </button>
+          <button class="menu-item" title="Color" id="color-button">
+            <svg class="icon" viewBox="0 0 24 24">
+              <path
+                d="M12,1C5.93,1,1,5.93,1,12s4.93,11,11,11s11-4.93,11-11S18.07,1,12,1z M12,19c-3.87,0-7-3.13-7-7s3.13-7,7-7s7,3.13,7,7S15.87,19,12,19z M12,5.5C10.62,5.5,9.5,6.62,9.5,8S10.62,10.5,12,10.5S14.5,9.38,14.5,8S13.38,5.5,12,5.5z"
+              />
+            </svg>
+          </button>
+          <button class="menu-item" title="Resize" button="resize-button">
+            <svg class="icon" viewBox="0 0 24 24">
+              <path
+                d="M10,3H3v7h2V6.41L14.59,16L16,14.59L5.41,4H10V3z M21,3h-7v2h4.59L9,14.59L10.41,16L19,7.41V12h2V3z"
+              />
+            </svg>
+          </button>
+        </div>
         <div class="canvas-container">
           <canvas id="mindMapCanvas" width="2600" height="1800"></canvas>
         </div>
