--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       type="module"
       src="javascript/startup/GrabbingMode.js"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/ab1140f293.js"
+      crossorigin="anonymous"
+    ></script>
 
     <title>Mind Map</title>
   </head>
@@ -43,13 +47,7 @@
               />
             </svg>
           </button>
-          <button class="menu-item" title="Load" id="load-button">
-            <svg class="icon" viewBox="0 0 24 24">
-              <path
-                d="M17,13c-1.1,0-2,0.9-2,2s0.9,2,2,2s2-0.9,2-2S18.1,13,17,13z M7,13c-1.1,0-2,0.9-2,2s0.9,2,2,2s2-0.9,2-2S8.1,13,7,13z M12,3L4,9v4h4v6h8v-6h4V9L12,3z"
-              />
-            </svg>
-          </button>
+
           <button class="menu-item" title="Export" id="export-button">
             <svg class="icon" viewBox="0 0 24 24">
               <path
@@ -57,10 +55,17 @@
               />
             </svg>
           </button>
+          <button class="menu-item" title="Load" id="load-button">
+            <svg class="icon" viewBox="0 0 24 24">
+              <path
+                d="M17,13c-1.1,0-2,0.9-2,2s0.9,2,2,2s2-0.9,2-2S18.1,13,17,13z M7,13c-1.1,0-2,0.9-2,2s0.9,2,2,2s2-0.9,2-2S8.1,13,7,13z M12,3L4,9v4h4v6h8v-6h4V9L12,3z"
+              />
+            </svg>
+          </button>
           <button class="menu-item" title="Color" id="color-button">
             <svg class="icon" viewBox="0 0 24 24">
               <path
-                d="M12,1C5.93,1,1,5.93,1,12s4.93,11,11,11s11-4.93,11-11S18.07,1,12,1z M12,19c-3.87,0-7-3.13-7-7s3.13-7,7-7s7,3.13,7,7S15.87,19,12,19z M12,5.5C10.62,5.5,9.5,6.62,9.5,8S10.62,10.5,12,10.5S14.5,9.38,14.5,8S13.38,5.5,12,5.5z"
+                d="M6,2C5.45,2,5,2.45,5,3v1c0,.55,.45,1,1,1h10c.55,0,1-.45,1-1V3c0-.55-.45-1-1-1H6zM15,4H9V3h6V4zM12,6c-2.76,0-5,2.24-5,5v7c0,1.66,1.34,3,3,3h4c1.66,0,3-1.34,3-3v-7C17,8.24,14.76,6,12,6zM10,14v3h1v-3H10zM12,14v3h1v-3H12zM14,14v3h1v-3H14zM10,11v2h1v-2H10zM12,11v2h1v-2H12zM14,11v2h1v-2H14zM19,7c-.55,0-1,.45-1,1s.45,1,1,1,1-.45,1-1S19.55,7,19,7zM17,7c-.55,0-1,.45-1,1s.45,1,1,1,1-.45,1-1S17.55,7,17,7zM15,7c-.55,0-1,.45-1,1s.45,1,1,1,1-.45,1-1S15.55,7,15,7z"
               />
             </svg>
           </button>
@@ -68,6 +73,43 @@
             <svg class="icon" viewBox="0 0 24 24">
               <path
                 d="M10,3H3v7h2V6.41L14.59,16L16,14.59L5.41,4H10V3z M21,3h-7v2h4.59L9,14.59L10.41,16L19,7.41V12h2V3z"
+              />
+            </svg>
+          </button>
+          <button class="menu-item" title="Rename" id="rename-button">
+            <svg
+              class="icon"
+              viewBox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <!-- Background Circle -->
+              <!-- <circle
+                class="svg-circle"
+                cx="12"
+                cy="12"
+                r="10"
+                fill="#f0f0f0"
+                stroke="#000"
+                stroke-width="2"
+              /> -->
+              <!-- Letter A -->
+              <text
+                class="svg-text"
+                x="50%"
+                y="50%"
+                font-size="22"
+                text-anchor="middle"
+                dy=".3em"
+                fill="#000"
+              >
+                A
+              </text>
+            </svg>
+          </button>
+          <button class="menu-item" title="Delete Node" id="delete-node-button">
+            <svg class="icon" viewBox="0 0 24 24">
+              <path
+                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM5 4h14V2H5v2zm-1 2v14c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V6H4z"
               />
             </svg>
           </button>
