added switch collapse to context menu

--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
       <ul>
         <li id="add-node">Add Node</li>
         <li id="rename-node">Rename</li>
+        <li id="collapse-node">Switch collapse</li>
         <li id="delete-node">Delete Node</li>
         <li id="resize-node">Resize</li>
         <li id="color-node">Color</li>
