added a functionnality to context menu of randomising color

--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
         <li id="collapse-node">Switch collapse</li>
         <li id="delete-node">Delete Node</li>
         <li id="resize-node">Resize</li>
-        <li id="color-node">Color</li>
+        <li id="select-color-node">Select color</li>
+        <li id="random-color-node">Random color</li>
       </ul>
     </div>
   </body>
