--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <script defer type="module" src="javascript/script.js"></script>
     <script
       defer
@@ -14,10 +14,6 @@
       defer
       type="module"
       src="javascript/startup/GrabbingMode.js"
-    ></script>
-    <script
-      src="https://kit.fontawesome.com/ab1140f293.js"
-      crossorigin="anonymous"
     ></script>
 
     <title>Mind Map</title>
@@ -125,7 +121,7 @@
         </div>
       </div>
     </div>
-    <div id="context-menu" class="context-menu">
+    <div id="circle-context-menu" class="circle-context-menu">
       <ul>
         <li id="add-node">Add Node</li>
         <li id="rename-node">Rename</li>
