--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/localstorage.css" />
+    <link rel="stylesheet" href="css/circlecontextmenu.css" />
     <script defer type="module" src="javascript/script.js"></script>
     <script
       defer
