added normal mode and some mouse mode updates

--- a/index.html
+++ b/index.html
@@ -111,6 +111,15 @@
               />
             </svg>
           </button>
+          <button
+            class="menu-item classic-cursor"
+            title="Normal Cursor"
+            id="normal-cursor-mode"
+          >
+            <svg class="icon" viewBox="0 0 24 24">
+              <path d="M12 2L2 22l10-4 10-16L12 2z" />
+            </svg>
+          </button>
         </div>
         <div class="canvas-container">
           <canvas id="mindMapCanvas" width="2600" height="1800"></canvas>
