added functionnality of radius selection from upper menu

--- a/index.html
+++ b/index.html
@@ -73,6 +73,16 @@
                 d="M10,3H3v7h2V6.41L14.59,16L16,14.59L5.41,4H10V3z M21,3h-7v2h4.59L9,14.59L10.41,16L19,7.41V12h2V3z"
               />
             </svg>
+            <input
+              type="number"
+              id="circle-radius-input"
+              name="radius"
+              class="number-input"
+              min="20"
+              max="500"
+              step="1"
+              value="40"
+            />
           </button>
           <button class="menu-item" title="Rename" id="rename-button">
             <svg
@@ -80,17 +90,6 @@
               viewBox="0 0 24 24"
               xmlns="http://www.w3.org/2000/svg"
             >
-              <!-- Background Circle -->
-              <!-- <circle
-                class="svg-circle"
-                cx="12"
-                cy="12"
-                r="10"
-                fill="#f0f0f0"
-                stroke="#000"
-                stroke-width="2"
-              /> -->
-              <!-- Letter A -->
               <text
                 class="svg-text"
                 x="50%"
