--- a/index.html
+++ b/index.html
@@ -54,10 +54,8 @@
             </svg>
           </button>
           <button class="menu-item" title="Import" id="import-button">
-            <svg class="icon" viewBox="0 0 24 24">
-              <path
-                d="M17,13c-1.1,0-2,0.9-2,2s0.9,2,2,2s2-0.9,2-2S18.1,13,17,13z M7,13c-1.1,0-2,0.9-2,2s0.9,2,2,2s2-0.9,2-2S8.1,13,7,13z M12,3L4,9v4h4v6h8v-6h4V9L12,3z"
-              />
+            <svg class="icon" viewBox="0 0 24 24" fill="currentColor">
+              <path d="M5 20h14v-2H5v2zm7-18L7 9h4v6h2V9h4L12 2z" />
             </svg>
           </button>
           <button class="menu-item" title="Color" id="color-button">
