--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                 d="M6,2C5.45,2,5,2.45,5,3v1c0,.55,.45,1,1,1h10c.55,0,1-.45,1-1V3c0-.55-.45-1-1-1H6zM15,4H9V3h6V4zM12,6c-2.76,0-5,2.24-5,5v7c0,1.66,1.34,3,3,3h4c1.66,0,3-1.34,3-3v-7C17,8.24,14.76,6,12,6zM10,14v3h1v-3H10zM12,14v3h1v-3H12zM14,14v3h1v-3H14zM10,11v2h1v-2H10zM12,11v2h1v-2H12zM14,11v2h1v-2H14zM19,7c-.55,0-1,.45-1,1s.45,1,1,1,1-.45,1-1S19.55,7,19,7zM17,7c-.55,0-1,.45-1,1s.45,1,1,1,1-.45,1-1S17.55,7,17,7zM15,7c-.55,0-1,.45-1,1s.45,1,1,1,1-.45,1-1S15.55,7,15,7z"
               />
             </svg>
+            <input type="color" id="color-picker" />
           </button>
           <button class="menu-item" title="Resize" id="resize-button">
             <svg class="icon" viewBox="0 0 24 24">
