removed unused method and dom from script.js

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </svg>
             <input type="color" id="color-picker" />
           </button>
-          <button class="menu-item" title="Color Copy" id="copy-color-button">
+          <button class="menu-item" title="Copy Color" id="copy-color-button">
             <svg class="icon" viewBox="0 0 24 24">
               <path
                 d="M12 2C10.9 2 10 2.9 10 4s.9 2 2 2 2-.9 2-2-.9-2-2-2zm7.76 2.24a1 1 0 00-1.41 0L15.34 7.3a7.994 7.994 0 00-5.65-2.36C4.46 4.94 0 9.4 0 15s4.46 10.06 10.06 10.06c5.6 0 10.06-4.46 10.06-10.06 0-2.13-.67-4.14-1.82-5.78l2.43-2.43a1 1 0 000-1.41zM2 15c0-4.42 3.58-8 8-8 .4 0 .79.03 1.18.08a9.98 9.98 0 011.96 1.15c.64.5 1.26 1.12 1.76 1.76.61.76 1.09 1.67 1.42 2.58.18.49.34.99.45 1.5.04.19.08.37.12.56.03.19.06.38.08.57.01.05.01.1.01.15.01.08.01.16.01.24 0 1.38-.56 2.74-1.59 3.77-1.03 1.03-2.39 1.59-3.77 1.59a7.979 7.979 0 01-5.65-2.36 7.993 7.993 0 01-2.36-5.65zM21 6.5L19.5 8 17 5.5 18.5 4 21 6.5z"
