created prototype of pdf converter

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/localstorage.css" />
     <link rel="stylesheet" href="css/circlecontextmenu.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script defer type="module" src="javascript/script.js"></script>
     <script
       defer
@@ -16,6 +18,11 @@
       defer
       type="module"
       src="javascript/startup/GrabbingMode.js"
+    ></script>
+    <script
+      defer
+      type="module"
+      src="javascript/startup/ConvertToPdf.js"
     ></script>
 
     <title>Mind Map</title>
