added functionnality of pdf converter to mindmap

--- a/index.html
+++ b/index.html
@@ -19,11 +19,6 @@
       type="module"
       src="javascript/startup/GrabbingMode.js"
     ></script>
-    <script
-      defer
-      type="module"
-      src="javascript/startup/ConvertToPdf.js"
-    ></script>
 
     <title>Mind Map</title>
   </head>
@@ -113,6 +108,25 @@
                 fill="#000"
               >
                 A
+              </text>
+            </svg>
+          </button>
+          <button class="menu-item" title="Convert to pdf" id="pdf-button">
+            <svg
+              class="icon"
+              viewBox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <text
+                class="svg-text"
+                x="50%"
+                y="50%"
+                font-size="14"
+                text-anchor="middle"
+                dy=".3em"
+                fill="#000"
+              >
+                PDF
               </text>
             </svg>
           </button>
