changed class to id for canvas-container

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </svg>
           </button>
         </div>
-        <div class="canvas-container">
+        <div class="canvas-container" id="canvas-container">
           <canvas id="mindMapCanvas" width="2600" height="1800"></canvas>
         </div>
       </div>
