--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script defer type="module" src="javascript/script.js"></script>
-    <script
+    <!-- <script
       defer
       type="module"
       src="javascript/startup/CenterMindmap.js"
-    ></script>
+    ></script> -->
     <script
       defer
       type="module"
