--- a/index.html
+++ b/index.html
@@ -69,7 +69,26 @@
               </text>
             </svg>
           </button>
-          <button class="menu-item" title="Color" id="color-button">
+          <button class="menu-item" title="Convert to image" id="image-button">
+            <svg
+              class="icon"
+              viewBox="0 0 25 25"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <text
+                class="svg-text"
+                x="50%"
+                y="50%"
+                font-size="14"
+                text-anchor="middle"
+                dy=".3em"
+                fill="#000"
+              >
+                IMG
+              </text>
+            </svg>
+          </button>
+          <button class="menu-item" title="Change color" id="color-button">
             <svg class="icon" viewBox="0 0 24 24">
               <path
                 d="M6,2C5.45,2,5,2.45,5,3v1c0,.55,.45,1,1,1h10c.55,0,1-.45,1-1V3c0-.55-.45-1-1-1H6zM15,4H9V3h6V4zM12,6c-2.76,0-5,2.24-5,5v7c0,1.66,1.34,3,3,3h4c1.66,0,3-1.34,3-3v-7C17,8.24,14.76,6,12,6zM10,14v3h1v-3H10zM12,14v3h1v-3H12zM14,14v3h1v-3H14zM10,11v2h1v-2H10zM12,11v2h1v-2H12zM14,11v2h1v-2H14zM19,7c-.55,0-1,.45-1,1s.45,1,1,1,1-.45,1-1S19.55,7,19,7zM17,7c-.55,0-1,.45-1,1s.45,1,1,1,1-.45,1-1S17.55,7,17,7zM15,7c-.55,0-1,.45-1,1s.45,1,1,1,1-.45,1-1S15.55,7,15,7z"
@@ -77,7 +96,7 @@
             </svg>
             <input type="color" id="color-picker" />
           </button>
-          <button class="menu-item" title="Copy Color" id="copy-color-button">
+          <button class="menu-item" title="Copy color" id="copy-color-button">
             <svg class="icon" viewBox="0 0 24 24">
               <path
                 d="M12 2C10.9 2 10 2.9 10 4s.9 2 2 2 2-.9 2-2-.9-2-2-2zm7.76 2.24a1 1 0 00-1.41 0L15.34 7.3a7.994 7.994 0 00-5.65-2.36C4.46 4.94 0 9.4 0 15s4.46 10.06 10.06 10.06c5.6 0 10.06-4.46 10.06-10.06 0-2.13-.67-4.14-1.82-5.78l2.43-2.43a1 1 0 000-1.41zM2 15c0-4.42 3.58-8 8-8 .4 0 .79.03 1.18.08a9.98 9.98 0 011.96 1.15c.64.5 1.26 1.12 1.76 1.76.61.76 1.09 1.67 1.42 2.58.18.49.34.99.45 1.5.04.19.08.37.12.56.03.19.06.38.08.57.01.05.01.1.01.15.01.08.01.16.01.24 0 1.38-.56 2.74-1.59 3.77-1.03 1.03-2.39 1.59-3.77 1.59a7.979 7.979 0 01-5.65-2.36 7.993 7.993 0 01-2.36-5.65zM21 6.5L19.5 8 17 5.5 18.5 4 21 6.5z"
