--- a/index.html
+++ b/index.html
@@ -88,6 +88,25 @@
               </text>
             </svg>
           </button>
+          <button class="menu-item" title="Convert to text" id="text-button">
+            <svg
+              class="icon"
+              viewBox="0 0 25 25"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <text
+                class="svg-text"
+                x="50%"
+                y="50%"
+                font-size="14"
+                text-anchor="middle"
+                dy=".3em"
+                fill="#000"
+              >
+                TXT
+              </text>
+            </svg>
+          </button>
           <button class="menu-item" title="Change color" id="color-button">
             <svg class="icon" viewBox="0 0 24 24">
               <path
@@ -161,7 +180,7 @@
         </div>
       </div>
       <div class="storage-container">
-        <div class="local-storage-name">Local storage</div>
+        <div class="local-storage-name">Browser storage</div>
         <div class="local-storage-list" id="local-storage-list">
           <div class="local-storage-item"></div>
         </div>
