fixed distance bug about rectangle

--- a/public/index.html
+++ b/public/index.html
@@ -189,6 +189,7 @@
     <div id="circle-context-menu" class="circle-context-menu">
       <ul>
         <li id="add-node">Add Node</li>
+        <li id="add-rectangle">Add rectangle</li>
         <li id="rename-node">Rename</li>
         <li id="collapse-node">Switch collapse</li>
         <li id="delete-node">Delete Node</li>
