--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="pb/css/index.css" />
-    <link rel="stylesheet" href="pb/css/localstorage.css" />
-    <link rel="stylesheet" href="pb/css/circlecontextmenu.css" />
+    <link rel="stylesheet" href="public/css/index.css" />
+    <link rel="stylesheet" href="public/css/localstorage.css" />
+    <link rel="stylesheet" href="public/css/circlecontextmenu.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script defer type="module" src="js/application.js"></script>
