updated context menu text

--- a/index.html
+++ b/index.html
@@ -188,11 +188,11 @@
     </div>
     <div id="circle-context-menu" class="circle-context-menu">
       <ul>
-        <li id="add-node">Add Node</li>
+        <li id="add-node">Add circle</li>
         <li id="add-rectangle">Add rectangle</li>
         <li id="rename-node">Rename</li>
         <li id="collapse-node">Switch collapse</li>
-        <li id="delete-node">Delete Node</li>
+        <li id="delete-node">Delete node</li>
         <li id="resize-node">Resize</li>
         <li id="select-color-node">Select color</li>
         <li id="random-color-node">Random color</li>
