renamed context menu to node-context-menu

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         </div>
       </div>
     </div>
-    <div id="circle-context-menu" class="circle-context-menu">
+    <div id="node-context-menu" class="node-context-menu">
       <ul>
         <li id="add-node">Add circle</li>
         <li id="add-rectangle">Add rectangle</li>
