added functionnality of toggling local storage window

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           <canvas id="mindMapCanvas" width="2600" height="1800"></canvas>
         </div>
       </div>
-      <div class="storage-container">
+      <div class="storage-container" id="storage-container">
         <div class="local-storage-name">Browser storage</div>
         <div class="local-storage-list" id="local-storage-list">
           <div class="local-storage-item"></div>
