fixed canvas blurriness with zoom

--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
           </button>
         </div>
         <div class="canvas-container" id="canvas-container">
-          <canvas id="mindMapCanvas" width="2600" height="1800"></canvas>
+          <!-- <canvas id="mindMapCanvas" width="2600" height="1800"></canvas> -->
+          <canvas id="mindMapCanvas"></canvas>
         </div>
       </div>
       <div class="storage-container" id="storage-container">
