--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="public/css/index.css" />
+    <link rel="stylesheet" href="public/css/uppermenu.css" />
     <link rel="stylesheet" href="public/css/localstorage.css" />
     <link rel="stylesheet" href="public/css/nodecontextmenu.css" />
     <script defer type="module" src="js/application.js"></script>
