started adding canvas context menu

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         </div>
       </div>
     </div>
-    <div id="node-context-menu" class="node-context-menu">
+    <div id="node-context-menu" class="context-menu">
       <ul>
         <li id="add-node">Add circle</li>
         <li id="add-rectangle">Add rectangle</li>
@@ -194,6 +194,13 @@
         <li id="resize-node">Resize</li>
         <li id="select-color-node">Select color</li>
         <li id="random-color-node">Random color</li>
+      </ul>
+    </div>
+    <div id="canvas-context-menu" class="context-menu">
+      <ul>
+        <li id="center-mindmap">Center mindmap</li>
+        <li id="show-local-storage">Show storage</li>
+        <li id="new-mindmap">New mindmap</li>
       </ul>
     </div>
   </body>
