added Canvas context menu

--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
     </div>
     <div id="canvas-context-menu" class="context-menu">
       <ul>
-        <li id="center-mindmap">Center mindmap</li>
-        <li id="show-local-storage">Show storage</li>
-        <li id="new-mindmap">New mindmap</li>
+        <li id="center-mindmap">center mindmap</li>
+        <li id="show-local-storage">toggle storage</li>
+        <li id="new-mindmap">new mindmap</li>
       </ul>
     </div>
   </body>
