--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="public/css/index.css" />
+    <link rel="stylesheet" href="public/css/main.css" />
     <link rel="stylesheet" href="public/css/uppermenu.css" />
     <link rel="stylesheet" href="public/css/localstorage.css" />
-    <link rel="stylesheet" href="public/css/nodecontextmenu.css" />
+    <link rel="stylesheet" href="public/css/contextmenu.css" />
     <script defer type="module" src="js/application.js"></script>
     <title>Mind Map</title>
   </head>
