--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="public/css/localstorage.css" />
     <link rel="stylesheet" href="public/css/contextmenu.css" />
     <script defer type="module" src="js/application.js"></script>
+    <link rel="icon" href="public/img/favicon.jpeg" type="image/png" />
     <title>Mind Map</title>
   </head>
   <body>
