--- a/index.html
+++ b/index.html
@@ -193,8 +193,9 @@
         <li id="collapse-node">Switch collapse</li>
         <li id="delete-node">Delete node</li>
         <li id="resize-node">Resize</li>
-        <li id="select-color-node">Select color</li>
-        <li id="random-color-node">Random color</li>
+        <li id="select-color-node">Select fill color</li>
+        <li id="select-border-color-node">Select border color</li>
+        <li id="random-color-node">Random fill color</li>
       </ul>
     </div>
     <div id="canvas-context-menu" class="context-menu">
