--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
       <ul>
         <li id="add-node">Add circle</li>
         <li id="add-rectangle">Add rectangle</li>
+        <li id="add-borderless-rectangle">Add idea</li>
         <li id="rename-node">Rename</li>
         <li id="collapse-node">Switch collapse</li>
         <li id="delete-node">Delete node</li>
